--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cookiespam/rn-tourguide",
+  "name": "rn-tourguide-gcb",
   "version": "2.7.3",
   "description": "Make an interactive step by step tour guide for your react-native app (a rewrite of react-native-copilot)",
   "main": "node_modules/expo/AppEntry.js",
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/xcarpentier/rn-tourguide.git"
+    "url": "git+https://github.com/lenigmacedo/rn-tourguide.git"
   },
   "keywords": [
     "react-native",
@@ -37,7 +37,7 @@
   "author": "Xavier Carpentier <xcapetir@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/xcarpentier/rn-tourguide/issues"
+    "url": "https://github.com/lenigmacedo/rn-tourguide/issues"
   },
   "homepage": "https://xcarpentier.github.io/rn-tourguide/",
   "devDependencies": {
